--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.plcoding.stockmarketapp">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".StockApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/stock_market_app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/stock_market_app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.StockMarketApp">
         <activity
